# notes-basic

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
i18n/en/: notes_basic.ftl  sticky_notes.ftl
i18n/ru/: notes_basic.ftl  sticky_notes.ftl
resources/: app.desktop  app.metainfo.xml  com.github.aae.sticky_notes.desktop  com.github.aae.sticky_notes.metainfo.xml  com.github.aae.sticky_notes_service.desktop
src/: app.rs  config.rs  i18n.rs  icons.rs  main.rs  note.rs  notes.rs  utils.rs
src/app/: applet.rs  edit_style.rs  restore_view.rs  service.rs  settings_view.rs  sticky_window.rs  styles_view.rs  utils.rs
src/notes/: collection.rs  indicator_stickynotes.rs  note_data.rs  note_style.rs
