[package]
name = "sticky-notes"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Implementation of sticky notes for Cosmic desktop environment"
repository = "https://github.com/0xAAE/sticky-notes"
default-run = "notes-service"

[features]
default = []
# embed svg files into binary and don't use XDG system-wide icons instead:
embed-icons = []
# build Cosmic DE applet, run only in Cosmic DE:
applet = ["applet-popup", "libcosmic/applet", "wayland", "libcosmic/single-instance"]
# use applet menu as sticky window menu if no applet is connected
applet-popup = ["libcosmic/applet", "wayland"]
# build to run in Wayland
wayland = ["libcosmic/wayland"]
# build with GPU rendering
wgpu = ["libcosmic/wgpu"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
dirs-next = "2.0"
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
palette = "0.7.6"
rust-embed = "8.8.0"
serde = "1.0"
serde_json = "1.0"
serde-json-fmt = "0.1"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.20", features = [ "v4" ] }
zbus = "5.13.2"

[dependencies.libcosmic]
#path = "/home/aae/dev/oss/libcosmic"
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Building the Cosmic panel applet
    # is controlled by package feature: "applet",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Enables desktop files helpers
    "desktop",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    # is controlled by package's feature applet:
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    # is controlled by package's feature: "wayland",
    # It is not recommended for applets: GPU-accelerated rendering
    # is controlled by package's feature: "wgpu",
    # Uncomment if markdown is required
    #"markdown"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../../../oss/libcosmic" }
# cosmic-config = { path = "../../../oss/libcosmic/cosmic-config" }
# cosmic-theme = { path = "../../../oss/libcosmic/cosmic-theme" }

[[bin]]
name = "notes-applet"
path = "src/bin/notes-applet.rs"
required-features = ["applet"]

[[bin]]
name = "notes-service"
path = "src/bin/notes-service.rs"
